<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/puzzle8background"
    tools:context=".PuzzleDisplay">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="169dp"
        android:layout_height="154dp"
        android:layout_marginTop="48dp"
        android:background="@color/design_default_color_background"
        android:text="@string/puzzle_end"
        android:textAlignment="center"
        android:textAppearance="@style/SmallMono"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/puzzle_welcome"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="154dp"
        android:layout_height="206dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/puzzle_intro"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="169dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:background="@color/design_default_color_background"
        android:text="@string/puzzle_start"
        android:textAlignment="center"
        android:textAppearance="@style/SmallMono"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="173dp"
        android:layout_height="199dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/puzzle_description"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/colorDark"
        android:onClick="displayPuzzleLayout"
        android:text="@string/puzzle_begin"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>