<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fwgc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fwgcBackground"
    tools:context=".FWGC_DisplayActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="124dp"
        android:layout_height="163dp"
        android:background="@color/design_default_color_background"
        android:text="@string/fwgc_end"
        android:textAlignment="center"
        android:textAppearance="@style/MediumMono"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fwgc_welcome"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/fwgc_intro"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="124dp"
        android:layout_height="163dp"
        android:background="@color/design_default_color_background"
        android:text="@string/fwgc_start"
        android:textAlignment="center"
        android:textAppearance="@style/MediumMono"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="229dp"
        android:layout_height="325dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/fwgc_description"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorDark"
        android:onClick="displayFwgcLayout"
        android:text="@string/fwgc_begin"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.363" />

</androidx.constraintlayout.widget.ConstraintLayout>