<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/openBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/LargeBold"
        android:textColor="@color/text"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/prompt"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/fwgc_button"
        android:layout_width="113dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/fwgcBackground"
        android:onClick="displayFwgc"
        android:text="@string/fwgc"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/puzzle_button"
        android:layout_width="116dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/puzzle8background"
        android:onClick="displayPuzzle"
        android:text="@string/eight_puzzle"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fwgc_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fpuzzle_button"
        android:layout_width="116dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/puzzle15background"
        android:onClick="displayFifteenPuzzle"
        android:text="@string/fifteen"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_button"
        app:layout_constraintVertical_bias="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>