<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/puzzle15background"
    android:backgroundTint="@color/puzzle15background"
    tools:context=".Fifteenpuzzle">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="189dp"
        android:layout_height="207dp"
        android:layout_marginTop="12dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:text="@string/f_puzzle_end"
        android:textAppearance="@style/MediumMono"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="189dp"
        android:layout_height="207dp"
        android:layout_marginTop="8dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:text="@string/f_puzzle_start"
        android:textAppearance="@style/MediumMono"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="400dp"
        android:layout_height="68dp"
        android:text="@string/f_puzzle_welcome"
        android:textAppearance="@style/MediumBold"
        android:textColor="@color/colorDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="176dp"
        android:layout_height="214dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/f_puzzle_intro"
        android:textAppearance="@style/MediumBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="189dp"
        android:layout_height="207dp"
        android:layout_marginTop="8dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:text="@string/f_puzzle_start"
        android:textAppearance="@style/MediumMono"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="178dp"
        android:layout_height="205dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/f_puzzle_description"
        android:textAppearance="@style/MediumBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorDark"
        android:onClick="display15PuzzleLayout"
        android:text="@string/f_puzzle_begin"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.109" />
</androidx.constraintlayout.widget.ConstraintLayout>